--- a/deep-learning-with-pytorch-step-by-step/Part-III-NLP/09_bert.ipynb
+++ b/deep-learning-with-pytorch-step-by-step/Part-III-NLP/09_bert.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOuc8pLeYqK2qCxGwMRU5IH",
+      "authorship_tag": "ABX9TyPOkJ2Dl82BeaXsZnX22TNe",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -94,7 +94,7 @@
       ],
       "metadata": {
         "id": "4KaJRDNLmTq_",
-        "outputId": "80354ba9-f259-4ebc-d8ba-515ef97c5305",
+        "outputId": "b2a2b7e9-233f-41b1-aa46-b5348cc48100",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -121,7 +121,7 @@
       "metadata": {
         "id": "eotRrneKk78G"
       },
-      "execution_count": 4,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -149,7 +149,7 @@
       "metadata": {
         "id": "i9pPl_87mbqd"
       },
-      "execution_count": 5,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -170,7 +170,7 @@
       "metadata": {
         "id": "w1HKtpREXdlF"
       },
-      "execution_count": 6,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -990,9 +990,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "c0eeepwOltO4",
-        "outputId": "8828f68e-501b-4193-cbe4-ab49daca669c"
+        "outputId": "e2167ad9-591b-441f-ad17-d692af858b13"
       },
-      "execution_count": 8,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1026,7 +1026,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 6
         }
       ]
     },
@@ -1052,9 +1052,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "pBBAxBcpmj8R",
-        "outputId": "f98b8f4b-1075-493c-9f29-ebc450e58d39"
+        "outputId": "eb25c763-f5c1-40d4-8f72-e222d6a33200"
       },
-      "execution_count": 11,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1064,7 +1064,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 11
+          "execution_count": 8
         }
       ]
     },
@@ -1083,9 +1083,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_99gvSe5mmK3",
-        "outputId": "c2848acd-3598-437a-c672-c127e6cf7d2c"
+        "outputId": "37e09985-9fbe-45e6-beeb-af0e6cf20d18"
       },
-      "execution_count": 12,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1096,7 +1096,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 12
+          "execution_count": 9
         }
       ]
     },
@@ -1111,9 +1111,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XVgz800LnsPw",
-        "outputId": "b7fb8679-4995-4ca0-fdb3-0b5d7e1b7fad"
+        "outputId": "e3dd045b-26ba-43b1-be74-6b5de84c6a53"
       },
-      "execution_count": 14,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -1135,9 +1135,367 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "# let’s take a look under BERT’s hood\n",
+        "input_embeddings = bert_model.embeddings\n",
+        "input_embeddings"
+      ],
+      "metadata": {
+        "id": "YBDpPfaCoI0K",
+        "outputId": "25f68862-9728-472a-e3d2-ea7999fbfc62",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "BertEmbeddings(\n",
+              "  (word_embeddings): Embedding(30522, 768, padding_idx=0)\n",
+              "  (position_embeddings): Embedding(512, 768)\n",
+              "  (token_type_embeddings): Embedding(2, 768)\n",
+              "  (LayerNorm): LayerNorm((768,), eps=1e-12, elementwise_affine=True)\n",
+              "  (dropout): Dropout(p=0.1, inplace=False)\n",
+              ")"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Let’s go over each of them\n",
+        "token_embeddings = input_embeddings.word_embeddings\n",
+        "token_embeddings"
+      ],
+      "metadata": {
+        "id": "aMZ7DOdFqNDm",
+        "outputId": "c1fd000f-b08e-4c4b-d4a0-cbc8a84102f3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Embedding(30522, 768, padding_idx=0)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 13
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# As usual, embeddings will be returned by each token ID in the input\n",
+        "input_token_emb = token_embeddings(tokens[\"input_ids\"])\n",
+        "input_token_emb"
+      ],
+      "metadata": {
+        "id": "5u7QgXWuryTM",
+        "outputId": "cb7c9dcd-5da5-499b-cf78-0e97ca2bbaa8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[[ 1.3630e-02, -2.6490e-02, -2.3503e-02,  ...,  8.6805e-03,\n",
+              "           7.1340e-03,  1.5147e-02],\n",
+              "         [-6.9710e-02, -8.8202e-02,  5.0619e-03,  ...,  1.4105e-02,\n",
+              "           2.1815e-02, -1.3769e-02],\n",
+              "         [-3.6044e-02, -2.4606e-02, -2.5735e-02,  ...,  3.3691e-03,\n",
+              "          -1.8300e-03,  2.6855e-02],\n",
+              "         ...,\n",
+              "         [ 5.2089e-05, -1.0468e-02, -9.9103e-03,  ...,  1.4558e-02,\n",
+              "           1.3217e-02,  2.2406e-02],\n",
+              "         [-3.5037e-02, -7.2933e-02, -3.6124e-02,  ..., -5.7723e-02,\n",
+              "          -5.5074e-03,  7.2688e-03],\n",
+              "         [-1.4521e-02, -9.9615e-03,  6.0263e-03,  ..., -2.5035e-02,\n",
+              "           4.6379e-03, -1.5378e-03]]], grad_fn=<EmbeddingBackward0>)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Since each input may have up to 512 tokens, the position embedding layer has exactly that number of entries\n",
+        "position_embeddings = input_embeddings.position_embeddings\n",
+        "position_embeddings"
+      ],
+      "metadata": {
+        "id": "e1o6j9bGsLAo",
+        "outputId": "1c5579c5-df30-40bb-bd10-83e07d99696c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Embedding(512, 768)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 15
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Each sequentially numbered position, up to the total length of the input, will return its corresponding embedding\n",
+        "position_ids = torch.arange(512).expand((1, -1))\n",
+        "position_ids"
+      ],
+      "metadata": {
+        "id": "ECOS5HPZsFai",
+        "outputId": "6e9f381f-09b2-4f25-847c-7ef7fb8ba54b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[  0,   1,   2,   3,   4,   5,   6,   7,   8,   9,  10,  11,  12,  13,\n",
+              "          14,  15,  16,  17,  18,  19,  20,  21,  22,  23,  24,  25,  26,  27,\n",
+              "          28,  29,  30,  31,  32,  33,  34,  35,  36,  37,  38,  39,  40,  41,\n",
+              "          42,  43,  44,  45,  46,  47,  48,  49,  50,  51,  52,  53,  54,  55,\n",
+              "          56,  57,  58,  59,  60,  61,  62,  63,  64,  65,  66,  67,  68,  69,\n",
+              "          70,  71,  72,  73,  74,  75,  76,  77,  78,  79,  80,  81,  82,  83,\n",
+              "          84,  85,  86,  87,  88,  89,  90,  91,  92,  93,  94,  95,  96,  97,\n",
+              "          98,  99, 100, 101, 102, 103, 104, 105, 106, 107, 108, 109, 110, 111,\n",
+              "         112, 113, 114, 115, 116, 117, 118, 119, 120, 121, 122, 123, 124, 125,\n",
+              "         126, 127, 128, 129, 130, 131, 132, 133, 134, 135, 136, 137, 138, 139,\n",
+              "         140, 141, 142, 143, 144, 145, 146, 147, 148, 149, 150, 151, 152, 153,\n",
+              "         154, 155, 156, 157, 158, 159, 160, 161, 162, 163, 164, 165, 166, 167,\n",
+              "         168, 169, 170, 171, 172, 173, 174, 175, 176, 177, 178, 179, 180, 181,\n",
+              "         182, 183, 184, 185, 186, 187, 188, 189, 190, 191, 192, 193, 194, 195,\n",
+              "         196, 197, 198, 199, 200, 201, 202, 203, 204, 205, 206, 207, 208, 209,\n",
+              "         210, 211, 212, 213, 214, 215, 216, 217, 218, 219, 220, 221, 222, 223,\n",
+              "         224, 225, 226, 227, 228, 229, 230, 231, 232, 233, 234, 235, 236, 237,\n",
+              "         238, 239, 240, 241, 242, 243, 244, 245, 246, 247, 248, 249, 250, 251,\n",
+              "         252, 253, 254, 255, 256, 257, 258, 259, 260, 261, 262, 263, 264, 265,\n",
+              "         266, 267, 268, 269, 270, 271, 272, 273, 274, 275, 276, 277, 278, 279,\n",
+              "         280, 281, 282, 283, 284, 285, 286, 287, 288, 289, 290, 291, 292, 293,\n",
+              "         294, 295, 296, 297, 298, 299, 300, 301, 302, 303, 304, 305, 306, 307,\n",
+              "         308, 309, 310, 311, 312, 313, 314, 315, 316, 317, 318, 319, 320, 321,\n",
+              "         322, 323, 324, 325, 326, 327, 328, 329, 330, 331, 332, 333, 334, 335,\n",
+              "         336, 337, 338, 339, 340, 341, 342, 343, 344, 345, 346, 347, 348, 349,\n",
+              "         350, 351, 352, 353, 354, 355, 356, 357, 358, 359, 360, 361, 362, 363,\n",
+              "         364, 365, 366, 367, 368, 369, 370, 371, 372, 373, 374, 375, 376, 377,\n",
+              "         378, 379, 380, 381, 382, 383, 384, 385, 386, 387, 388, 389, 390, 391,\n",
+              "         392, 393, 394, 395, 396, 397, 398, 399, 400, 401, 402, 403, 404, 405,\n",
+              "         406, 407, 408, 409, 410, 411, 412, 413, 414, 415, 416, 417, 418, 419,\n",
+              "         420, 421, 422, 423, 424, 425, 426, 427, 428, 429, 430, 431, 432, 433,\n",
+              "         434, 435, 436, 437, 438, 439, 440, 441, 442, 443, 444, 445, 446, 447,\n",
+              "         448, 449, 450, 451, 452, 453, 454, 455, 456, 457, 458, 459, 460, 461,\n",
+              "         462, 463, 464, 465, 466, 467, 468, 469, 470, 471, 472, 473, 474, 475,\n",
+              "         476, 477, 478, 479, 480, 481, 482, 483, 484, 485, 486, 487, 488, 489,\n",
+              "         490, 491, 492, 493, 494, 495, 496, 497, 498, 499, 500, 501, 502, 503,\n",
+              "         504, 505, 506, 507, 508, 509, 510, 511]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 16
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "seq_length = tokens[\"input_ids\"].size(1)\n",
+        "input_pos_emb = position_embeddings(position_ids[:, :seq_length])\n",
+        "input_pos_emb"
+      ],
+      "metadata": {
+        "id": "fsxza4UGsiVW",
+        "outputId": "49a58720-a8f6-4fbd-d642-c0ad15875e35",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[[ 1.7505e-02, -2.5631e-02, -3.6642e-02,  ...,  3.3437e-05,\n",
+              "           6.8312e-04,  1.5441e-02],\n",
+              "         [ 7.7580e-03,  2.2613e-03, -1.9444e-02,  ...,  2.8910e-02,\n",
+              "           2.9753e-02, -5.3247e-03],\n",
+              "         [-1.1287e-02, -1.9644e-03, -1.1573e-02,  ...,  1.4908e-02,\n",
+              "           1.8741e-02, -7.3140e-03],\n",
+              "         ...,\n",
+              "         [-9.2809e-03,  8.3268e-03, -4.1643e-03,  ...,  3.4903e-02,\n",
+              "          -1.8319e-02, -2.9017e-03],\n",
+              "         [-8.5999e-03,  3.2205e-04, -2.1249e-03,  ...,  2.7744e-02,\n",
+              "          -7.2760e-03, -2.0280e-03],\n",
+              "         [-3.4622e-04, -8.3709e-04, -2.2228e-02,  ...,  2.3493e-02,\n",
+              "          -4.5198e-04, -5.7741e-04]]], grad_fn=<EmbeddingBackward0>)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 17
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Then, since there can only be either one or two sentences in the input, the segment embedding layer has only two entries:\n",
+        "segment_embeddings = input_embeddings.token_type_embeddings\n",
+        "segment_embeddings"
+      ],
+      "metadata": {
+        "id": "cyDqpT08s-xT",
+        "outputId": "29046d5f-a476-4073-8523-b32b8fce73b8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Embedding(2, 768)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 18
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# For these embeddings, BERT will use the token_type_ids returned by the tokenizer\n",
+        "input_seg_emb = segment_embeddings(tokens[\"token_type_ids\"])\n",
+        "input_seg_emb"
+      ],
+      "metadata": {
+        "id": "YDKRI3rItVV0",
+        "outputId": "9984e18c-eb15-4378-92b6-a9106d34e32c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[[ 0.0004,  0.0110,  0.0037,  ..., -0.0066, -0.0034, -0.0086],\n",
+              "         [ 0.0004,  0.0110,  0.0037,  ..., -0.0066, -0.0034, -0.0086],\n",
+              "         [ 0.0004,  0.0110,  0.0037,  ..., -0.0066, -0.0034, -0.0086],\n",
+              "         ...,\n",
+              "         [ 0.0011, -0.0030, -0.0032,  ...,  0.0047, -0.0052, -0.0112],\n",
+              "         [ 0.0011, -0.0030, -0.0032,  ...,  0.0047, -0.0052, -0.0112],\n",
+              "         [ 0.0011, -0.0030, -0.0032,  ...,  0.0047, -0.0052, -0.0112]]],\n",
+              "       grad_fn=<EmbeddingBackward0>)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 20
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Finally, BERT adds up all three embeddings (token, position, and segment):"
+      ],
+      "metadata": {
+        "id": "tNFmEyKSuyMv"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "input_emb = input_token_emb + input_pos_emb + input_seg_emb\n",
+        "input_emb"
+      ],
+      "metadata": {
+        "id": "kPMRLrXtukSU",
+        "outputId": "eefbb3ec-1dd3-4865-86d3-88923036342a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[[ 0.0316, -0.0411, -0.0564,  ...,  0.0021,  0.0044,  0.0219],\n",
+              "         [-0.0615, -0.0750, -0.0107,  ...,  0.0364,  0.0482, -0.0277],\n",
+              "         [-0.0469, -0.0156, -0.0336,  ...,  0.0117,  0.0135,  0.0109],\n",
+              "         ...,\n",
+              "         [-0.0081, -0.0051, -0.0172,  ...,  0.0542, -0.0103,  0.0083],\n",
+              "         [-0.0425, -0.0756, -0.0414,  ..., -0.0252, -0.0180, -0.0060],\n",
+              "         [-0.0138, -0.0138, -0.0194,  ...,  0.0032, -0.0011, -0.0133]]],\n",
+              "       grad_fn=<AddBackward0>)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 21
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "It will still layer normalize the embeddings and apply dropout to them, but that’s it—these are the inputs BERT uses."
+      ],
+      "metadata": {
+        "id": "6-N_GhVlvW_3"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Pre-training Tasks"
+      ],
+      "metadata": {
+        "id": "qb9ReuZAvSh0"
+      }
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "YBDpPfaCoI0K"
+        "id": "2o4Cy2tcvTcR"
       },
       "execution_count": null,
       "outputs": []
