--- a/deep-learning-with-pytorch/8-using-convolutions-to-generalize/1_convolutions_in_action.ipynb
+++ b/deep-learning-with-pytorch/8-using-convolutions-to-generalize/1_convolutions_in_action.ipynb
@@ -6,7 +6,7 @@
       "name": "1-convolutions-in-action.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNCIaAo8pIOdhcsiMnjsEan",
+      "authorship_tag": "ABX9TyNJOolip9lU7ImMua4iR//+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -89,7 +89,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-T4StfdbzKPO",
-        "outputId": "680a109d-e990-48e6-d8b0-218dad616c31"
+        "outputId": "03adbac4-7a9d-4440-c5bf-f0b81a194392"
       },
       "source": [
         "data_path = '../data-unversioned/p1ch6/'\n",
@@ -114,7 +114,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "100%|██████████| 170498071/170498071 [00:03<00:00, 44490567.68it/s]\n"
+            "100%|██████████| 170498071/170498071 [00:01<00:00, 90225695.37it/s]\n"
           ]
         },
         {
@@ -133,7 +133,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3zOHe4ySzqB1",
-        "outputId": "beba521e-db2e-481f-da96-1c415d2b7926"
+        "outputId": "30d4e3e3-7497-4266-d79a-5f5912813fbe"
       },
       "source": [
         "cifar10_val = datasets.CIFAR10(\n",
@@ -195,7 +195,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "cee9b2b5-14ad-4464-ff81-3d5da64bc06e"
+        "outputId": "5018b12c-ec7f-453a-8a3e-47ac0b671da7"
       },
       "source": [
         "conv = nn.Conv2d(3, 16, kernel_size=3)\n",
@@ -237,7 +237,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "78356b94-4cef-46bf-8052-4612fc4c84e4"
+        "outputId": "be58b46b-22c1-4aff-a137-2b6900f114e6"
       },
       "source": [
         "conv.weight.shape, conv.bias.shape"
@@ -280,12 +280,12 @@
       ],
       "metadata": {
         "id": "NdaCZITgrQiz",
-        "outputId": "2ae9d204-4630-45ad-c603-cecb1263f7e9",
+        "outputId": "ccb814bd-16ca-458e-a103-78967081501c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 8,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -295,7 +295,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 7
         }
       ]
     },
@@ -306,12 +306,12 @@
       ],
       "metadata": {
         "id": "LO6cs18zrXwQ",
-        "outputId": "d4f37d2c-2fed-4792-aa3f-832890187c6e",
+        "outputId": "e4841dae-fe49-49f7-d9cc-667d92d548e9",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -321,7 +321,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 8
         }
       ]
     },
@@ -332,14 +332,14 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d0e4bb44-ce29-4b15-9dc5-38f5e5322526"
+        "outputId": "c9728a49-278f-405d-99fd-9913ae038168"
       },
       "source": [
         "img, _ = cifar2[0]\n",
         "output = conv(img.unsqueeze(0))\n",
         "img.unsqueeze(0).shape, output.shape"
       ],
-      "execution_count": 10,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -349,7 +349,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 9
         }
       ]
     },
@@ -370,13 +370,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 430
         },
-        "outputId": "08ab2a53-985b-4f3e-8c8e-7f3cdffa71f6"
+        "outputId": "409548a9-5370-490d-bbcd-af963a0502a8"
       },
       "source": [
         "plt.imshow(output[0, 0].detach(), cmap=\"gray\")\n",
         "plt.show()"
       ],
-      "execution_count": 11,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "display_data",
@@ -398,7 +398,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 435
         },
-        "outputId": "e8007490-d01f-4919-8e16-ec97232c4fc5"
+        "outputId": "10710a79-167b-4ab6-f81f-22da3e7882ca"
       },
       "source": [
         "plt.figure(figsize=(10, 4.8))\n",
@@ -411,7 +411,7 @@
         "\n",
         "plt.show()"
       ],
-      "execution_count": 12,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "display_data",
@@ -451,11 +451,7 @@
         "id": "rPStthf9XH13"
       },
       "source": [
-        "By default, PyTorch will slide the convolution kernel within the input picture, getting `width - kernel_width + 1` horizontal and vertical positions. For odd-sized kernels, this results in images that are one-half the convolution kernel’s width (in our case, 3//2 = 1) smaller on each side. This explains why we’re missing two pixels in each dimension.\n",
-        "\n",
-        "However, PyTorch gives us the possibility of padding the image by creating ghost pixels around the border that have value zero as far as the convolution is concerned.\n",
-        "\n",
-        "<img src='https://github.com/rahiakela/img-repo/blob/master/deep-learning-with-pytorch/zero-padding.png?raw=1' width='800'/>\n",
+        "By default, PyTorch will slide the convolution kernel within the input picture, getting `width - kernel_width + 1` horizontal and vertical positions.\n",
         "\n",
         "In our case, specifying padding=1 when kernel_size=3 means i00 has an extra set\n",
         "of neighbors above it and to its left, so that an output of the convolution can be computed even in the corner of our original image."
@@ -468,41 +464,26 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "753718b7-edac-4ec5-cc48-5e78a7df362a"
+        "outputId": "33c60fb8-a851-4f94-dd2b-3e6eee28efc3"
       },
       "source": [
         "# Now with padding\n",
-        "conv = nn.Conv2d(3, 1, kernel_size=3, padding=1)\n",
+        "conv = nn.Conv2d(3, 16, kernel_size=3, padding=1)\n",
         "output = conv(img.unsqueeze(0))\n",
         "img.unsqueeze(0).shape, output.shape"
       ],
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "(torch.Size([1, 3, 32, 32]), torch.Size([1, 1, 32, 32]))"
+              "(torch.Size([1, 3, 32, 32]), torch.Size([1, 16, 32, 32]))"
             ]
           },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 15
+          "metadata": {},
+          "execution_count": 14
         }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "7xUxNnVYc33A"
-      },
-      "source": [
-        "There are two main reasons to pad convolutions.\n",
-        "\n",
-        "First, doing so helps us separate the matters of convolution and changing image sizes, so we have one less thing to remember.\n",
-        "\n",
-        "And second, when we have more elaborate structures such as skip connections or the U-Nets we’ll cover in part 2, we want the tensors before and after a few convolutions to be of compatible size so that we can add them or take differences."
       ]
     },
     {
@@ -511,7 +492,7 @@
         "id": "N8GFtKsIdDM4"
       },
       "source": [
-        "## Detecting features with convolutions"
+        "## Detecting features"
       ]
     },
     {
@@ -764,7 +745,7 @@
         "id": "AiItKYOGw3D6"
       },
       "source": [
-        "## Putting it all together for our network"
+        "## Putting it all together"
       ]
     },
     {
