--- a/deep-learning-with-pytorch/8-using-convolutions-to-generalize/1_convolutions_in_action.ipynb
+++ b/deep-learning-with-pytorch/8-using-convolutions-to-generalize/1_convolutions_in_action.ipynb
@@ -6,14 +6,13 @@
       "name": "1-convolutions-in-action.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyP2P/Unw8Wn6lBH+PsFKwwL",
+      "authorship_tag": "ABX9TyMtrLW2pbT9MvPPVXVLscih",
       "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
       "display_name": "Python 3"
-    },
-    "accelerator": "GPU"
+    }
   },
   "cells": [
     {
@@ -89,7 +88,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-T4StfdbzKPO",
-        "outputId": "4bd771bf-2cd8-4132-a2f9-067d6397106f"
+        "outputId": "d4ed79b8-0ceb-4659-d4d2-90738a436e0b"
       },
       "source": [
         "data_path = '../data-unversioned/p1ch6/'\n",
@@ -114,7 +113,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "100%|██████████| 170498071/170498071 [00:01<00:00, 96611187.14it/s] \n"
+            "100%|██████████| 170498071/170498071 [00:02<00:00, 74847464.24it/s]\n"
           ]
         },
         {
@@ -133,7 +132,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3zOHe4ySzqB1",
-        "outputId": "31f10967-cebe-4eeb-e4e6-bcbd063fee81"
+        "outputId": "fc6084a2-36a8-4d8d-d226-e6b695cc957e"
       },
       "source": [
         "cifar10_val = datasets.CIFAR10(\n",
@@ -195,13 +194,13 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "af2d95a8-abbd-4183-a421-28799b1ee60b"
+        "outputId": "b154e05d-e873-443c-e59d-74d4715b76e3"
       },
       "source": [
         "conv = nn.Conv2d(3, 16, kernel_size=3)\n",
         "conv"
       ],
-      "execution_count": 6,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -211,7 +210,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 5
         }
       ]
     },
@@ -237,12 +236,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "23fa1352-b35d-449f-f744-8e1e03444375"
+        "outputId": "7b65505d-c963-44ee-a3ba-8d1e3350d4f7"
       },
       "source": [
         "conv.weight.shape, conv.bias.shape"
       ],
-      "execution_count": 7,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -252,7 +251,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 6
         }
       ]
     },
@@ -280,12 +279,12 @@
       ],
       "metadata": {
         "id": "NdaCZITgrQiz",
-        "outputId": "8a410947-ef0d-48c9-d1ed-8993e503904d",
+        "outputId": "e2e225bc-b5ec-4b15-fdb1-4e681c9afcbf",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 8,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -295,7 +294,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 7
         }
       ]
     },
@@ -306,12 +305,12 @@
       ],
       "metadata": {
         "id": "LO6cs18zrXwQ",
-        "outputId": "34c5f6cc-1448-477b-8822-4b0aa205b2c9",
+        "outputId": "d634237d-9c68-4dec-9c53-1af2bb2fe630",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -321,7 +320,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 8
         }
       ]
     },
@@ -332,14 +331,14 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "9ea5c15e-fc4e-4dec-8e17-477db3f90699"
+        "outputId": "5818fe67-a764-40fb-8e24-3639d5f3cc38"
       },
       "source": [
         "img, _ = cifar2[0]\n",
         "output = conv(img.unsqueeze(0))\n",
         "img.unsqueeze(0).shape, output.shape"
       ],
-      "execution_count": 10,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -349,7 +348,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 9
         }
       ]
     },
@@ -370,13 +369,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 0
         },
-        "outputId": "bd9f700e-03a6-4509-8385-61e2bd44da75"
+        "outputId": "264ec2d7-bd53-406a-a2f9-44e146974bd5"
       },
       "source": [
         "plt.imshow(output[0, 0].detach(), cmap=\"gray\")\n",
         "plt.show()"
       ],
-      "execution_count": 11,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "display_data",
@@ -398,7 +397,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 0
         },
-        "outputId": "3305ee06-8cae-4faf-cdc3-980b6140afbb"
+        "outputId": "7ef1291a-7e36-4974-96c0-029e9af2de94"
       },
       "source": [
         "plt.figure(figsize=(10, 4.8))\n",
@@ -411,7 +410,7 @@
         "\n",
         "plt.show()"
       ],
-      "execution_count": 12,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "display_data",
@@ -464,7 +463,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f21973c5-c865-42e6-f488-829353af4e33"
+        "outputId": "45c732f6-8a2f-4df9-ecc3-0b6d9205e372"
       },
       "source": [
         "# Now with padding\n",
@@ -472,7 +471,7 @@
         "output = conv(img.unsqueeze(0))\n",
         "img.unsqueeze(0).shape, output.shape"
       ],
-      "execution_count": 13,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -482,7 +481,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 13
+          "execution_count": 12
         }
       ]
     },
@@ -517,7 +516,7 @@
         "with torch.no_grad():\n",
         "  conv.weight.fill_(1.0 / 9.0)"
       ],
-      "execution_count": 14,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -535,9 +534,9 @@
         "id": "TKzL-y797dKQ",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 435
+          "height": 0
         },
-        "outputId": "026d19cb-5197-4f83-c4c9-248866df736a"
+        "outputId": "610eab6d-b7b2-46dd-bdb4-08a86032bac2"
       },
       "source": [
         "output = conv(img.unsqueeze(0))\n",
@@ -550,7 +549,7 @@
         "plt.title('input')  # bookskip\n",
         "plt.show()"
       ],
-      "execution_count": 15,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "display_data",
@@ -589,7 +588,7 @@
         "  ])\n",
         "  conv.bias.zero_()"
       ],
-      "execution_count": 16,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -598,9 +597,9 @@
         "id": "jBE6SxwTBBSI",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 435
+          "height": 0
         },
-        "outputId": "abe533d7-a5aa-4365-80f7-85e172b7e32b"
+        "outputId": "16bc2bd4-a0d2-4376-b1b4-1deb574395f0"
       },
       "source": [
         "output = conv(img.unsqueeze(0))\n",
@@ -614,7 +613,7 @@
         "\n",
         "plt.show()"
       ],
-      "execution_count": 17,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "display_data",
@@ -643,23 +642,7 @@
         "id": "gkZLWpCbIajG"
       },
       "source": [
-        "This is all well and good, but conceptually there’s an elephant in the room. We got all excited because by moving from fully connected layers to convolutions, we achieve locality and translation invariance. Then we recommended the use of small kernels, like 3 × 3, or 5 × 5: that’s peak locality, all right.\n",
-        "\n",
-        "**FROM LARGE TO SMALL: DOWNSAMPLING**\n",
-        "\n",
-        "Downsampling could in principle occur in different ways. Scaling an image by half is the equivalent of taking four neighboring pixels as input and producing one pixel as output. How we compute the value of the output based on the values of the input is up to us. We could\n",
-        "\n",
-        "- **Average the four pixels**. This average pooling was a common approach early on but has fallen out of favor somewhat.\n",
-        "- **Take the maximum of the four pixels**. This approach, called max pooling, is currently the most commonly used approach, but it has a downside of discarding the other three-quarters of the data.\n",
-        "- **Perform a strided convolution, where only every Nth pixel is calculated**. A 3 × 4 convolution with stride 2 still incorporates input from all pixels from the previous layer. The literature shows promise for this approach, but it has not yet supplanted max pooling.\n",
-        "\n",
-        "<img src='https://github.com/rahiakela/img-repo/blob/master/deep-learning-with-pytorch/max-pooling.png?raw=1' width='800'/>\n",
-        "\n",
-        "By keeping the highest value in the 2 × 2 neighborhood as the downsampled\n",
-        "output, we ensure that the features that are found survive the downsampling,\n",
-        "at the expense of the weaker responses.\n",
-        "\n",
-        "Max pooling is provided by the nn.MaxPool2d module (as with convolution, there are versions for 1D and 3D data). It takes as input the size of the neighborhood over which to operate the pooling operation. If we wish to downsample our image by half, we’ll want to use a size of 2.\n",
+        "If we wish to downsample our image by half, we’ll want to use a size of 2.\n",
         "\n",
         "Let’s verify that it works as expected directly on our input image:"
       ]
@@ -671,7 +654,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "3fb0aeb4-09c9-4ba7-caf2-2311547ec02d"
+        "outputId": "d367f52c-82ad-40d9-cd95-cdb872a86f6c"
       },
       "source": [
         "pool = nn.MaxPool2d(2)\n",
@@ -679,7 +662,7 @@
         "\n",
         "img.unsqueeze(0).shape, output.shape"
       ],
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -688,28 +671,9 @@
               "(torch.Size([1, 3, 32, 32]), torch.Size([1, 3, 16, 16]))"
             ]
           },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 20
+          "metadata": {},
+          "execution_count": 17
         }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "VB6klnpatya8"
-      },
-      "source": [
-        "**COMBINING CONVOLUTIONS AND DOWNSAMPLING FOR GREAT GOOD**\n",
-        "\n",
-        "Let’s now see how combining convolutions and downsampling can help us recognize\n",
-        "larger structures. we start by applying a set of 3 × 3 kernels on our 8 × 8\n",
-        "image, obtaining a multichannel output image of the same size. Then we scale down the output image by half, obtaining a 4 × 4 image, and apply another set of 3 × 3 kernels to it. This second set of kernels operates on a 3 × 3 neighborhood of something that has been scaled down by half, so it effectively maps back to 8 × 8 neighborhoods of the input. In addition, the second set of kernels takes the output of the first set of kernels (features like averages, edges, and so on) and extracts additional features on top of those.\n",
-        "\n",
-        "<img src='https://github.com/rahiakela/img-repo/blob/master/deep-learning-with-pytorch/max-pooling-ops.png?raw=1' width='800'/>\n",
-        "\n",
-        "So, on one hand, the first set of kernels operates on small neighborhoods on firstorder, low-level features, while the second set of kernels effectively operates on wider neighborhoods, producing features that are compositions of the previous features."
       ]
     },
     {
